--- a/app/src/main/res/layout/card_item_dialog.xml
+++ b/app/src/main/res/layout/card_item_dialog.xml
@@ -58,7 +58,6 @@
                 android:id="@+id/fm_card_position"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="30dp"
                 android:textSize="24sp"
                 android:textStyle="italic"
                 android:textColor="@color/black"
@@ -71,6 +70,7 @@
                 android:id="@+id/fm_card_location"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
                 android:textSize="36sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
